# mkdocs-jconfig-plugin

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: release.yml
mkdocs_jconfig/: plugin.py
test/simple/: mkdocs.yml
test/simple/docs/: index.md
