[tool.poetry]
name = "mkdocs-jconfig-plugin"
version = "0.1.3"
description = "An MkDocs plugin to process configuration items with Jinja2"
authors = ["Jacques Supcik <jacques.supcik@hefr.ch>"]
repository = "https://github.com/supcik/mkdocs-jconfig-plugin"
license = "Apache-2"
readme = "README.md"
packages = [{ include = "mkdocs_jconfig" }]
keywords = ["mkdocs", "python", "markdown", "wiki"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology"
]
exclude = ["test"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"
mkdocs-material = { version = "^9.5.9", optional = true }
mkdocs-macros-plugin = { version = "^1.0.5", optional = true }

[tool.poetry.extras]
test = ["mkdocs-material", "mkdocs-macros-plugin"]

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pylint = "^3.0.3"
isort = "^5.13.2"
pre-commit = "^3.6.1"
mkdocs-calendar-plugin = "^0.4.0"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]

[tool.poetry.plugins."mkdocs.plugins"]
jconfig = "mkdocs_jconfig.plugin:JConfigPlugin"

[tool.ruff]
# On top of the defaults (`E`, `F`), enable flake8-bugbear (`B`) and flake8-quotes (`Q`).
select = ["E", "F", "B", "Q", "N", "I", "UP", "PL", "RUF", "C90"]
